--- a/entregable1/index.html
+++ b/entregable1/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TCubers</title>
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/" type="image/x-icon">
 </head>
 <body>
-    <main>
         <header id="header-barra">
             <picture>
                 <img src="./assets/logo.png" alt="LOGO DE CUBO">
@@ -20,18 +19,21 @@
                 <a href="#">CONTACTO</a>
             </nav>
         </header>
-        <section id="section-principal">
-            <h1>¡El Fabuloso mundo del SpeedCubing!</h1>
-            <p>El SpeedCubing es un deporte que consiste en la resolución del Cubo de Rubik y otros puzles derivados del famoso cubo inventado por Erno Rubik en 1974 en el menor tiempo posible.</p>
-            <picture>
-                <img src="./assets/compe.jpg" alt="">
+        <main id="section-principal">
+            <article>
+                <h2>¡SpeedCubing!</h2>
+                <p>El SpeedCubing es un deporte que consiste en la resolución del Cubo de Rubik y otros puzles derivados del famoso cubo inventado por Erno Rubik en 1974 en el menor tiempo posible.</p>
+            </article>
+                <picture>
+                    <img src="./assets/compe.jpg" alt="competicion">
             </picture>
-        </section>
-        
-    </main>
-    <section>
-        <h2>Tipo de Cubos</h2>
-        <p>Existen muchas variedades de Cubos, de diferentes tamaños y formas, por eso aqui te vamos a mostrar lo que usan los competidores.</p>
+        </main>
+
+    <section id="section-secundaria">
+        <article>
+            <h2>Tipo de Cubos</h2>
+            <p>Existen muchas variedades de Cubos, de diferentes tamaños y formas, por eso aqui te vamos a mostrar lo que usan los competidores.</p>
+        </article>
     </section>
     
 </body>
