--- a/entregable1/index.html
+++ b/entregable1/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TCubers</title>
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="shortcut icon" href="assets/" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/1716496426938.png" type="image/x-icon">
 </head>
 <body>
         <header id="header-barra">
