--- a/entregable1/index.html
+++ b/entregable1/index.html
@@ -13,19 +13,19 @@
                 <img src="./assets/logo.png" alt="LOGO DE CUBO">
             </picture>
             <nav>
-                <a href="#">INICIO</a>
-                <a href="#">PRODUCTOS</a>
-                <a href="#">CLIENTES</a>
-                <a href="#">CONTACTO</a>
+                <a href="#home">INICIO</a>
+                <a href="#products">PRODUCTOS</a>
+                <a href="#clients">CLIENTES</a>
+                <a href="#contacts">CONTACTO</a>
             </nav>
         </header>
         <main id="section-principal">
             <article>
                 <h2>¡SpeedCubing!</h2>
-                <p>El SpeedCubing es un deporte que consiste en la resolución del Cubo de Rubik y otros puzles derivados del famoso cubo inventado por Erno Rubik en 1974 en el menor tiempo posible.</p>
+                <p>El SpeedCubing es un deporte que consiste en resolver el Cubo de Rubik y otros puzzles derivados del famoso cubo inventado por Ernő Rubik en 1974, en el menor tiempo posible.</p>
             </article>
                 <picture>
-                    <img src="./assets/compe.jpg" alt="competicion">
+                    <img src="./assets/rubix3x3.png" alt="competicion">
             </picture>
         </main>
 
@@ -35,6 +35,30 @@
             <p>Existen muchas variedades de Cubos, de diferentes tamaños y formas, por eso aqui te vamos a mostrar lo que usan los competidores.</p>
         </article>
     </section>
-    
+
+    <section id="cubos">
+        <h3>Cubo 2x2</h3>
+        <picture><img src="./assets/2x2.png" alt=""></picture>
+        <h3>Cubo 3x3</h3>
+        <picture><img src="./assets/3x3.png" alt=""></picture>
+        <h3>Cubo 4x4</h3>
+        <picture><img src="./assets/4x4.png" alt=""></picture>
+        <h3>Cubo Triangular</h3>
+        <picture><img src="./assets/triangular.png" alt="" ></picture>
+    </section>
+    <header id="header-final">
+        <nav>
+            <li>
+                <ul>
+                    <p>Gracias por la visita.❤️</p>
+                    <a href="#">Colaborar</a>
+                    <a href="#">¿Queres ser parte del equipo?</a>
+                    <a href="#">Redes Sociales</a>
+                    <a href="#">Ayuda</a>
+                </ul>
+            </li>
+        </nav>
+    </header>
 </body>
 </html>
+
